--- a/src/app/admin-maestro/admin-maestro.page.html
+++ b/src/app/admin-maestro/admin-maestro.page.html
@@ -5,7 +5,7 @@
     <img src="assets/img/MANZANA DOABLY.png" class="img-circle elevation-2" alt="User Image">
   </div>
   <div class="info">
-    <a href="/perfil" class="d-block"><strong>{{user.displayName}}</strong></a>
+    <a href="/perfil-maestro" class="d-block"><strong>{{user.email}}</strong></a>
   </div>
 </div>
 </ion-toolbar>
