--- a/src/app/admin-maestro/calificar-alumno/calificar-alumno.page.scss
+++ b/src/app/admin-maestro/calificar-alumno/calificar-alumno.page.scss
@@ -27,6 +27,9 @@ td{
     text-align: center;
     font-size: 20px;
 }
+textarea{
+    color: #142c5c;
+}
 .boton{
     background-color: #142c5c;
     display: inline-block;
