--- a/src/app/admin-maestro/clases/maestros.page.html
+++ b/src/app/admin-maestro/clases/maestros.page.html
@@ -14,16 +14,16 @@
    </div>
     </ion-toolbar>
   </ion-header>
-  <div class="card bg-gradient-success">
-    <div class="card-header border-0">
+  <div class="fondo">
+    <div >
       
-      <div class="card"  >
-        <div class="card">
-          <div class="card-body">
-              <h3 class="titulo">Tus clases esta semana</h3>
-              <br>
+      <div >
+        <div >
+          <div>
+            <br>
+            <h2>Tus clases esta semana</h2>
+            <br>
               <table class="table">
-                  <tbody>
                     <tr>
                         <td>Nombre del alumno</td>
                         <td>Nivel de ingles</td>
@@ -41,7 +41,6 @@
                         </td>
                       </tr>
                     </ng-container>
-                  </tbody>
                </table>
           </div>
     </div>
