--- a/src/app/admin/estadisticas/estadisticas.page.html
+++ b/src/app/admin/estadisticas/estadisticas.page.html
@@ -12,52 +12,56 @@
     </div>
   </div>
 </ion-toolbar>
-  <div class="card bg-gradient-info">
-    <div class="card-header border-0">
-      <h3 class="card-title">
-        <i class="fas fa-th mr-1"></i>
-        Estadisticas
-      </h3>
-
-      <div class="card-tools">
-        <button type="button" class="btn bg-info btn-sm" data-card-widget="collapse">
-          <i class="fas fa-minus"></i>
-        </button>
-        <button type="button" class="btn bg-info btn-sm" data-card-widget="remove">
-          <i class="fas fa-times"></i>
-        </button>
-      </div>
-    </div>
-    <div class="card-body">
-      <canvas class="chart" id="line-chart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
-    </div>
-    <!-- /.card-body -->
-    <div class="card-footer bg-transparent">
-      <div class="row">
-        <div class="col-4 text-center">
-          <input type="text" class="knob" data-readonly="true" value="20" data-width="60" data-height="60"
-                 data-fgColor="#39CCCC">
-
-          <div class="text-white">Clase 1</div>
-        </div>
-        <!-- ./col -->
-        <div class="col-4 text-center">
-          <input type="text" class="knob" data-readonly="true" value="50" data-width="60" data-height="60"
-                 data-fgColor="#39CCCC">
-
-          <div class="text-white">Clase 2</div>
-        </div>
-        <!-- ./col -->
-        <div class="col-4 text-center">
-          <input type="text" class="knob" data-readonly="true" value="30" data-width="60" data-height="60"
-                 data-fgColor="#39CCCC">
-
-          <div class="text-white">Clase 3</div>
-        </div>
-        <!-- ./col -->
-      </div>
-      <!-- /.row -->
-    </div>
-    <!-- /.card-footer -->
+<body class="sign-container gradient-1">
+  <div class="board">
+          <h3>Tus avances</h3>
+      <div class="sub_board" *ngFor="let calificaciones of listTarjetas">
+          <div class="sep_board"></div>
+          <div class="cont_board">
+              <div class="graf_board">
+                  <div class="barra">
+                      <div class="sub_barra b1">
+                          <div class="tag_g">{{calificaciones.writting}}</div>
+                          <div class="tag_leyenda">Writting</div>
+                      </div>
+                  </div>
+                  <div class="barra">
+                      <div class="sub_barra b2">
+                          <div class="tag_g">{{calificaciones.speaking}}</div>
+                          <div class="tag_leyenda">Speaking</div>
+                      </div>
+                  </div>
+                  <div class="barra">
+                      <div class="sub_barra b3">
+                          <div class="tag_g"></div>
+                          <div class="tag_leyenda">Espacio</div>
+                      </div>
+                  </div>
+                  <div class="barra">
+                      <div class="sub_barra b4">
+                          <div class="tag_g"></div>
+                          <div class="tag_leyenda">Espacio</div>
+                      </div>
+                  </div>
+                 
+              </div>
+              <div class="tag_board">
+                  <div class="sub_tag_board">
+                      <div>100</div>
+                      <div>90</div>
+                      <div>80</div>
+                      <div>70</div>
+                      <div>60</div>
+                      <div>50</div>
+                      <div>40</div>
+                      <div>30</div>
+                      <div>20</div>
+                      <div>10</div>
+                  </div>
+              </div>
+         </div> 
+          <div class="sep_board"></div>
+     </div>    
   </div>
+</body>
 </ion-content>
