--- a/src/app/admin/calificaciones/calificaciones.page.html
+++ b/src/app/admin/calificaciones/calificaciones.page.html
@@ -1,64 +1,27 @@
-<ion-header>
-  <ion-button routerLink="/admin" expand="block">Regresar</ion-button>
-</ion-header>
 <ion-content *ngIf="user$ | async as user">
-    <ion-toolbar>
-  <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-    <div class="image">
-      <img src="assets/img/MANZANA DOABLY.png" class="img-circle elevation-2" alt="User Image">
-    </div>
-    <div class="info">
-      <a href="/perfil" class="d-block"><strong>{{user.displayName}}</strong></a>
-    </div>
+  <ion-button routerLink="/admin" expand="block">Regresar</ion-button>
+<div class="sign-container gradient-1">
+  <div class="card-body">
+      <h3 class="titulo">Tus calificaciones</h3>
+      <br>
+      <table class="table">
+            <tr>
+                <td>Nombre</td>
+                <td>Semana</td>
+                <td>Writting</td>
+                <td>Speaking</td>
+                <td>Retroalimentacion</td>
+            </tr>
+            <ng-container *ngFor="let calificaciones of listTarjetas">
+              <tr *ngIf="user.displayName === calificaciones.nombre_alumno">
+                <th scope="row">{{calificaciones.nombre_alumno}}</th>
+                <td>{{calificaciones.semana}}</td>
+                <td>{{calificaciones.writting}}</td>
+                <td>{{calificaciones.speaking}}</td>
+                <td>{{calificaciones.retroalimentacion}}</td>
+              
+            </ng-container>
+      </table>
   </div>
-</ion-toolbar>
-  <div class="card bg-gradient-primary">
-    <div class="card-header border-0">
-      <h3 class="card-title">
-        <i class="fas fa-map-marker-alt mr-1"></i>
-        Calificaciones
-      </h3>
-      <!-- card tools -->
-      <div class="card-tools">
-        <button type="button"
-                class="btn btn-primary btn-sm daterange"
-                data-toggle="tooltip"
-                title="Date range">
-          <i class="far fa-calendar-alt"></i>
-        </button>
-        <button type="button"
-                class="btn btn-primary btn-sm"
-                data-card-widget="collapse"
-                data-toggle="tooltip"
-                title="Collapse">
-          <i class="fas fa-minus"></i>
-        </button>
-      </div>
-      <!-- /.card-tools -->
-    </div>
-    <div class="card-body">
-      <div id="world-map" style="height: 250px; width: 100%;"></div>
-    </div>
-    <!-- /.card-body-->
-    <div class="card-footer bg-transparent">
-      <div class="row">
-        <div class="col-4 text-center">
-          <div id="sparkline-1"></div>
-          <div class="text-white">Clase 1</div>
-        </div>
-        <!-- ./col -->
-        <div class="col-4 text-center">
-          <div id="sparkline-2"></div>
-          <div class="text-white">Clase 2</div>
-        </div>
-        <!-- ./col -->
-        <div class="col-4 text-center">
-          <div id="sparkline-3"></div>
-          <div class="text-white">Clase 3</div>
-        </div>
-        <!-- ./col -->
-      </div>
-      <!-- /.row -->
-    </div>
-  </div>
+</div>
 </ion-content>
