--- a/src/app/admin-maestro/calif/calif.page.html
+++ b/src/app/admin-maestro/calif/calif.page.html
@@ -36,6 +36,11 @@
                         <td>{{users.email}}</td>
                         
                       </tr>
+                      <tr *ngFor="let maestros of listTarjetas">
+                        <a href="/calificar-alumno" ><td>{{maestros.email}}</td></a>
+                        <td>{{maestros.email}}</td>
+                        
+                      </tr>
                     </ng-container>
                   </tbody>
                </table>
