--- a/src/app/admin/calificaciones/calificaciones.page.scss
+++ b/src/app/admin/calificaciones/calificaciones.page.scss
@@ -44,11 +44,24 @@ transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-
   background-color: #142c5c ;
   color: #ffff;
   border-radius: 2px;
+  margin-bottom: auto;
+  border-bottom: 50%;
+  font-weight: bold;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 h3{
   color: black;
   text-align: center;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 input{
   color: #dc3545;
+}
+.gradient-1 {
+  --background: linear-gradient(180deg,  #142c5c  0%, rgb(255, 255, 255) 100% );
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, #142c5c);
+}
+.gradient-2 {
+  --background: linear-gradient(180deg,  #28a745 , #ffffff );
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%,  #142c5c 500%);
 }
