--- a/src/theme/signupconcept.scss
+++ b/src/theme/signupconcept.scss
@@ -66,11 +66,11 @@
 }
 
 .gradient-1 {
-    --background: linear-gradient(180deg,  #bcd33c  0%, rgb(255, 255, 255) 100%);
-    background: linear-gradient(180deg, rgb(255, 255, 255) 0%,  #bcd33c);
+    --background: linear-gradient(180deg,  #D4AF37  0%, rgb(255, 255, 255) 100%);
+    background: linear-gradient(180deg, rgb(255, 255, 255) 0%,  #D4AF37);
 }
 .gradient-2 {
-    --background: linear-gradient(180deg,  #9cb434 , #9cb434 );
+    --background: linear-gradient(180deg,  #D4AF37, #D4AF37 );
     background: linear-gradient(180deg, rgb(255, 255, 255) 0%,  #142c5c 500%);
 }
 
