--- a/src/app/seleccion/seleccion.page.html
+++ b/src/app/seleccion/seleccion.page.html
@@ -6,6 +6,7 @@
       </div>
     </div>
     <div class="login-container">
+      
       <ion-list lines="none" class="form fade-in">
 <ion-row>
   <ion-col>
@@ -13,8 +14,10 @@
   <br>
     <ion-button routerLink="/login-maestro" expand="block">Maestro</ion-button>
   </ion-col>
+  <script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(324844)</script> 
 </ion-row>
       </ion-list>
 </div>
   </div>
+  <div data-bot-id="324844"></div> 
 </ion-content>
